--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -108,7 +108,7 @@ function w3_close() {
 }
 </script>
 
-<a href="secundaria04.html"> enlace a secundaria 04 </a>
+<a href="index00.html"> enlace a index 00 </a>
 
 </body>
 </html>
